# CMake-Best-Practices

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  README.md  cmake-format.py
chapter01/: CMakeLists.txt
chapter01/policy_example/: CMakeLists.txt
chapter01/simple_executable/: CMakeLists.txt
chapter01/simple_executable/src/: main.cpp
chapter02/component1/: CMakeLists.txt
chapter02/component2/: CMakeLists.txt
chapter03/: CMakeLists.txt
chapter03/hello_header_only/: CMakeLists.txt
chapter03/hello_object_lib/: CMakeLists.txt
chapter03/hello_shared_lib/: CMakeLists.txt
chapter03/hello_static_lib/: CMakeLists.txt
chapter03/hello_static_lib/src/: hello.cpp
chapter03/hello_world_standalone/: CMakeLists.txt
chapter03/src/: main.cpp
chapter04/: CMakeLists.txt
chapter04/ex01_executable/: CMakeLists.txt
chapter04/ex02_static/: CMakeLists.txt
chapter04/ex03_file/: CMakeLists.txt  chapter4_greeter_content
chapter04/ex04_directory/: CMakeLists.txt
chapter04/ex05_config_file_package/: CMakeLists.txt
chapter04/ex05_consumer/: CMakeLists.txt
chapter04/ex06_pack/: CMakeLists.txt
chapter05/: CMakeLists.txt
chapter05/conan_conanfile_example/: CMakeLists.txt
chapter05/conan_example/: CMakeLists.txt
chapter05/external_project_example/: CMakeLists.txt
chapter05/fetch_content_example/: CMakeLists.txt
chapter05/find_module/: CMakeLists.txt
chapter05/find_package_example/: CMakeLists.txt
chapter05/vcpkg_example/: CMakeLists.txt
chapter07/: CMakeLists.txt
chapter07/clang_tidy_example/: CMakeLists.txt
chapter07/combined_sanitizer_example/: CMakeLists.txt
chapter07/cppcheck_example/: CMakeLists.txt
chapter07/cpplint_example/: CMakeLists.txt
chapter07/custom_build_type/: CMakeLists.txt
chapter07/fixture_example/: CMakeLists.txt
chapter07/iwyu_example/: CMakeLists.txt
chapter07/lwyu_example/: CMakeLists.txt
chapter07/pass_fail_criteria/: CMakeLists.txt
chapter07/resource_group_example/: CMakeLists.txt  resources.json
chapter07/simple_sanitizer_example/: CMakeLists.txt
chapter07/simple_test/: CMakeLists.txt
chapter07/test_discovery_example/: CMakeLists.txt
chapter07/test_labels/: CMakeLists.txt
chapter07/timeout_example/: CMakeLists.txt
chapter08/: CMakeLists.txt
chapter08/chaining_custom_commands_example/: CMakeLists.txt
chapter08/configure_file_example/: .gitignore  CMakeLists.txt  version.h.in
chapter08/create_source_file_example/: CMakeLists.txt
chapter08/custom_command_example/: CMakeLists.txt
chapter08/custom_target_dependency_example/: CMakeLists.txt
chapter08/custom_target_example/: CMakeLists.txt
chapter08/execute_process_example/: CMakeLists.txt
chapter10/: CMakeLists.txt
chapter10/ex01_external_deps/: CMakeLists.txt
chapter10/ex02_external_deps_with_extproject/: CMakeLists.txt  superbuild.cmake
chapter10/ex03_simple_qt_app/: main.cpp  superbuild.cmake
chapter12/: CMakeLists.txt
chapter12/check_push_pop/: CMakeLists.txt
chapter12/check_source_compiles/: CMakeLists.txt
chapter12/emulator-example/: CMakeLists.txt  arm64.toolchain.cmake
chapter12/iOS_example/: CMakeLists.txt  ios.toolchain.cmake
chapter14/: CMakeLists.txt
chapter14/precompiled_headers/: CMakeLists.txt
chapter14/unity_build/: CMakeLists.txt
chapter14/unity_build_group/: CMakeLists.txt
chapter_1/: CMakeLists.txt
chapter_1/simple_executable/: CMakeLists.txt
chapter_1/src/: main.cpp
chapter_11/: CMakeLists.txt
chapter_11/ex01_libfuzzer_static_lib/: CMakeLists.txt
chapter_11/ex02_afl_static_lib/: CMakeLists.txt
chapter_12/: CMakeLists.txt
chapter_12/android-example/: CMakeLists.txt
chapter_12/check_push_pop/: CMakeLists.txt
chapter_12/check_source_compiles/: CMakeLists.txt
chapter_12/emulator-example/: CMakeLists.txt  arm64.toolchain.cmake
chapter_12/iOS_example/: CMakeLists.txt
chapter_13/: CMakeLists.txt
chapter_13/ex01_git_utility/: CMakeLists.txt
chapter_13/ex02_envfile_utility/: CMakeLists.txt
chapter_13/ex03_hadouken/: CMakeLists.txt
chapter_15/: CMakeLists.txt
chapter_15/src/: main.cpp
chapter_2/: CMakeLists.txt  README.md
chapter_2/component1/: CMakeLists.txt
chapter_2/component2/: CMakeLists.txt
chapter_2/component_interface/: CMakeLists.txt
chapter_2/driver_app/: CMakeLists.txt
chapter_3/: CMakeLists.txt
chapter_3/hello_header_only/: CMakeLists.txt
chapter_3/hello_lib/: CMakeLists.txt
chapter_3/hello_object_lib/: CMakeLists.txt
chapter_3/hello_shared_lib/: CMakeLists.txt
chapter_3/hello_world/: CMakeLists.txt
chapter_3/hello_world_standalone/: CMakeLists.txt
chapter_3/policy_example/: CMakeLists.txt
chapter_3/src/: main.cpp
chapter_4/: CMakeLists.txt
chapter_4/ex01_executable/: CMakeLists.txt
chapter_4/ex02_static/: CMakeLists.txt
chapter_4/ex03_file/: CMakeLists.txt  chapter4_greeter.py
chapter_4/ex04_directory/: CMakeLists.txt
chapter_4/ex05_config_file_package/: CMakeLists.txt
chapter_4/ex05_consumer/: CMakeLists.txt
chapter_4/ex06_pack/: CMakeLists.txt
chapter_5/: CMakeLists.txt
chapter_5/conan_conanfile_example/: CMakeLists.txt  conanfile.txt
chapter_5/conan_example/: CMakeLists.txt
chapter_5/external_project_example/: CMakeLists.txt
chapter_5/fetch_content_example/: CMakeLists.txt
chapter_5/find_module/: CMakeLists.txt
chapter_5/find_package_example/: CMakeLists.txt
chapter_5/vcpkg_example/: CMakeLists.txt  vcpkg.json
chapter_6/: CMakeLists.txt
chapter_6/ex01_doxdocgen/: CMakeLists.txt  README.md
chapter_6/ex02_doxplantuml/: CMakeLists.txt
chapter_8/: CMakeLists.txt
chapter_8/clang-format-example/: CMakeLists.txt
chapter_8/configure_file_example/: CMakeLists.txt  version.h.in
chapter_8/create_hash_example/: CMakeLists.txt
chapter_8/create_source_file_example/: CMakeLists.txt  SomeFile.txt  message.txt
chapter_8/create_tar_archive_example/: CMakeLists.txt
chapter_8/custom_command_example/: CMakeLists.txt
chapter_8/custom_target_example/: CMakeLists.txt
chapter_8/execute_process_example/: CMakeLists.txt
chapter_8/hash_target_example/: CMakeLists.txt
(+177 files in other folders)
